feat(ai): Add AI agent management and selection functionality [WIP]
- Introduced AIAgent struct to represent AI agents with properties like Id, Name, Prompt, Model, and Tools.
- Updated AIChatData to include Tools and AgentId for better agent integration.
- Implemented agent loading and management in AIChatPlugin, including settings UI for configuring agents.
- Enhanced chat functionality to support agent selection via mentions in chat input.
- Added new API endpoints for fetching agents and integrated them into the Flutter UI.
- Updated localization files to support new agent-related strings in English, Portuguese, Russian, and Chinese.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -149,10 +149,12 @@
   "ui_ai_chat_select_model": "Please select a model",
   "ui_ai_chat_input_hint": "Type a message here, press ← to send",
   "ui_ai_chat_configure_tools": "Configure Tool Usage",
+  "ui_ai_chat_select_agent": "Select Agent",
   "ui_ai_chat_send": "Send",
   "ui_ai_chat_options": "Chat Options",
   "ui_ai_chat_select_model_title": "Select Model",
   "ui_ai_chat_configure_tools_title": "Configure Tools",
+  "ui_ai_chat_select_agent_title": "Select Agent",
   "ui_ai_chat_tool_status_streaming": "Streaming",
   "ui_ai_chat_tool_status_pending": "Pending",
   "ui_ai_chat_tool_status_running": "Running",
@@ -297,6 +299,16 @@
   "plugin_manager_remove_from_favorite": "Remove from favorite",
   "plugin_manager_add_to_favorite": "Add to favorite",
   "plugin_manager_invalid_query_type": "Invalid query type",
+  "plugin_ai_chat_agents": "Agents",
+  "plugin_ai_chat_agents_tooltip": "Configure AI agents with custom prompts and tools",
+  "plugin_ai_chat_agent_name": "Name",
+  "plugin_ai_chat_agent_name_tooltip": "The name of the agent",
+  "plugin_ai_chat_agent_prompt": "Prompt",
+  "plugin_ai_chat_agent_prompt_tooltip": "The system prompt for the agent",
+  "plugin_ai_chat_agent_model": "Model",
+  "plugin_ai_chat_agent_model_tooltip": "The AI model to use for this agent",
+  "plugin_ai_chat_agent_tools": "Tools",
+  "plugin_ai_chat_agent_tools_tooltip": "The tools this agent can use",
   "plugin_ai_chat_mcp_servers": "MCP Servers",
   "plugin_ai_chat_mcp_servers_tooltip": "The MCP servers to use for this command, visit https://mcp.so for more mcp servers",
   "plugin_ai_chat_mcp_server_name": "Name",
