--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -147,10 +147,12 @@
   "ui_ai_chat_select_model": "Por favor, selecione um modelo",
   "ui_ai_chat_input_hint": "Digite uma mensagem aqui, pressione ← para enviar",
   "ui_ai_chat_configure_tools": "Configurar uso de ferramentas",
+  "ui_ai_chat_select_agent": "Selecionar agente",
   "ui_ai_chat_send": "Enviar",
   "ui_ai_chat_options": "Opções de chat",
   "ui_ai_chat_select_model_title": "Selecionar modelo",
   "ui_ai_chat_configure_tools_title": "Configurar ferramentas",
+  "ui_ai_chat_select_agent_title": "Selecionar agente",
   "ui_ai_chat_tool_status_streaming": "Transmitindo",
   "ui_ai_chat_tool_status_pending": "Pendente",
   "ui_ai_chat_tool_status_running": "Executando",
@@ -295,6 +297,16 @@
   "plugin_manager_remove_from_favorite": "Remover dos favoritos",
   "plugin_manager_add_to_favorite": "Adicionar aos favoritos",
   "plugin_manager_invalid_query_type": "Tipo de consulta inválido",
+  "plugin_ai_chat_agents": "Agentes",
+  "plugin_ai_chat_agents_tooltip": "Configure agentes de IA com prompts e ferramentas personalizados",
+  "plugin_ai_chat_agent_name": "Nome",
+  "plugin_ai_chat_agent_name_tooltip": "O nome do agente",
+  "plugin_ai_chat_agent_prompt": "Prompt",
+  "plugin_ai_chat_agent_prompt_tooltip": "O prompt do sistema para o agente",
+  "plugin_ai_chat_agent_model": "Modelo",
+  "plugin_ai_chat_agent_model_tooltip": "O modelo de IA a ser usado para este agente",
+  "plugin_ai_chat_agent_tools": "Ferramentas",
+  "plugin_ai_chat_agent_tools_tooltip": "As ferramentas que este agente pode usar",
   "plugin_ai_chat_mcp_servers": "Servidores MCP",
   "plugin_ai_chat_mcp_servers_tooltip": "Os servidores MCP a serem usados para esta consulta, visite https://mcp.so para mais servidores MCP",
   "plugin_ai_chat_mcp_server_name": "Nome",
