--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -147,10 +147,12 @@
   "ui_ai_chat_select_model": "Пожалуйста, выберите модель",
   "ui_ai_chat_input_hint": "Введите сообщение здесь, нажмите ← для отправки",
   "ui_ai_chat_configure_tools": "Настроить использование инструментов",
+  "ui_ai_chat_select_agent": "Выбрать агента",
   "ui_ai_chat_send": "Отправить",
   "ui_ai_chat_options": "Опции чата",
   "ui_ai_chat_select_model_title": "Выбрать модель",
   "ui_ai_chat_configure_tools_title": "Настроить инструменты",
+  "ui_ai_chat_select_agent_title": "Выбрать агента",
   "ui_ai_chat_tool_status_streaming": "Потоковая передача",
   "ui_ai_chat_tool_status_pending": "В ожидании",
   "ui_ai_chat_tool_status_running": "Выполняется",
@@ -295,6 +297,16 @@
   "plugin_manager_remove_from_favorite": "Удалить из избранного",
   "plugin_manager_add_to_favorite": "Добавить в избранное",
   "plugin_manager_invalid_query_type": "Недопустимый тип запроса",
+  "plugin_ai_chat_agents": "Агенты",
+  "plugin_ai_chat_agents_tooltip": "Настройте ИИ-агентов с пользовательскими подсказками и инструментами",
+  "plugin_ai_chat_agent_name": "Имя",
+  "plugin_ai_chat_agent_name_tooltip": "Имя агента",
+  "plugin_ai_chat_agent_prompt": "Подсказка",
+  "plugin_ai_chat_agent_prompt_tooltip": "Системная подсказка для агента",
+  "plugin_ai_chat_agent_model": "Модель",
+  "plugin_ai_chat_agent_model_tooltip": "Модель ИИ для этого агента",
+  "plugin_ai_chat_agent_tools": "Инструменты",
+  "plugin_ai_chat_agent_tools_tooltip": "Инструменты, которые может использовать этот агент",
   "plugin_ai_chat_mcp_servers": "Серверы MCP",
   "plugin_ai_chat_mcp_servers_tooltip": "Серверы MCP для использования для этой команды, посетите https://mcp.so для большего количества серверов MCP",
   "plugin_ai_chat_mcp_server_name": "Имя",
