--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -147,10 +147,12 @@
   "ui_ai_chat_select_model": "请选择模型",
   "ui_ai_chat_input_hint": "在这里输入消息，按 ← 发送",
   "ui_ai_chat_configure_tools": "配置工具使用",
+  "ui_ai_chat_select_agent": "选择智能体",
   "ui_ai_chat_send": "发送",
   "ui_ai_chat_options": "聊天选项",
   "ui_ai_chat_select_model_title": "选择模型",
   "ui_ai_chat_configure_tools_title": "配置工具",
+  "ui_ai_chat_select_agent_title": "选择智能体",
   "ui_ai_chat_tool_status_streaming": "正在调用",
   "ui_ai_chat_tool_status_pending": "等待执行",
   "ui_ai_chat_tool_status_running": "正在执行",
@@ -297,6 +299,16 @@
   "plugin_manager_remove_from_favorite": "从收藏夹移除",
   "plugin_manager_add_to_favorite": "添加到收藏夹",
   "plugin_manager_invalid_query_type": "无效的查询类型",
+  "plugin_ai_chat_agents": "智能体",
+  "plugin_ai_chat_agents_tooltip": "配置具有自定义提示词和工具的AI智能体",
+  "plugin_ai_chat_agent_name": "名称",
+  "plugin_ai_chat_agent_name_tooltip": "智能体的名称",
+  "plugin_ai_chat_agent_prompt": "提示词",
+  "plugin_ai_chat_agent_prompt_tooltip": "智能体的系统提示词",
+  "plugin_ai_chat_agent_model": "模型",
+  "plugin_ai_chat_agent_model_tooltip": "此智能体使用的AI模型",
+  "plugin_ai_chat_agent_tools": "工具",
+  "plugin_ai_chat_agent_tools_tooltip": "此智能体可以使用的工具",
   "plugin_ai_chat_mcp_servers": "MCP 服务器",
   "plugin_ai_chat_mcp_servers_tooltip": "用于此命令的 MCP 服务器，访问 https://mcp.so 获取更多 MCP 服务器",
   "plugin_ai_chat_mcp_server_name": "名称",
