refactor(ai): improve ai agent functionality
- Removed outdated rules and guidelines from the .cursor/rules directory.
- Added comprehensive coding standards for Go, Python, and Flutter, including naming conventions, error handling, and logging practices.
- Updated the Wox project structure documentation to reflect the current organization of core components, plugins, and frontend interfaces.
- Enhanced the Python plugin development guide with standards for type annotations, async programming, and API usage examples.
- Improved the Flutter UI development guide to include directory structure and UI development principles.
- Renamed and refactored agent and model handling in the AI chat system for clarity and consistency.
- Updated internationalization strings across multiple language files to support new features.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -165,6 +165,11 @@
   "ui_ai_chat_tool_detail_params": "Parameters",
   "ui_ai_chat_tool_detail_duration": "Duration",
   "ui_ai_chat_tool_detail_response": "Response",
+  "ui_ai_chat_agent": "Agent",
+  "ui_ai_chat_model": "Model",
+  "ui_ai_chat_tools": "Tools",
+  "ui_ai_chat_tools_enabled": "enabled",
+  "ui_ai_chat_no_tools": "No tools",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
