--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -163,6 +163,11 @@
   "ui_ai_chat_tool_detail_params": "Parâmetros",
   "ui_ai_chat_tool_detail_duration": "Duração",
   "ui_ai_chat_tool_detail_response": "Resposta",
+  "ui_ai_chat_agent": "Agente",
+  "ui_ai_chat_model": "Modelo",
+  "ui_ai_chat_tools": "Ferramentas",
+  "ui_ai_chat_tools_enabled": "habilitado",
+  "ui_ai_chat_no_tools": "Sem ferramentas",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
