--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -163,6 +163,11 @@
   "ui_ai_chat_tool_detail_params": "Параметры",
   "ui_ai_chat_tool_detail_duration": "Длительность",
   "ui_ai_chat_tool_detail_response": "Ответ",
+  "ui_ai_chat_agent": "Агент",
+  "ui_ai_chat_model": "Модель",
+  "ui_ai_chat_tools": "Инструменты",
+  "ui_ai_chat_tools_enabled": "включено",
+  "ui_ai_chat_no_tools": "Нет инструментов",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
