--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -163,6 +163,11 @@
   "ui_ai_chat_tool_detail_params": "参数",
   "ui_ai_chat_tool_detail_duration": "耗时",
   "ui_ai_chat_tool_detail_response": "响应",
+  "ui_ai_chat_agent": "智能体",
+  "ui_ai_chat_model": "模型",
+  "ui_ai_chat_tools": "工具",
+  "ui_ai_chat_tools_enabled": "已启用",
+  "ui_ai_chat_no_tools": "无工具",
   "ui_max_result_count": "最大结果数",
   "ui_max_result_count_tips": "显示在列表中的最大结果数量（5-15项）",
   "plugin_app_open": "打开",
