feat(ui): update app width settings for improved user experience #4197

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -143,7 +143,7 @@
   "ui_ai_model_selector_cancel": "Cancel",
   "ui_ai_model_selector_save": "Save",
   "ui_app_width": "Window width",
-  "ui_app_width_tips": "Adjust the width of the Wox window (800-1600 pixels)",
+  "ui_app_width_tips": "Adjust the width of the Wox window",
   "ui_max_result_count": "Maximum results",
   "ui_max_result_count_tips": "Maximum number of results to display in the list (5-15 items)",
   "ui_ai_chat_select_model": "Please select a model",
