--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -143,7 +143,7 @@
   "ui_ai_model_selector_cancel": "取消",
   "ui_ai_model_selector_save": "保存",
   "ui_app_width": "窗口宽度",
-  "ui_app_width_tips": "调整 Wox 窗口的宽度（800-1600像素）",
+  "ui_app_width_tips": "调整 Wox 窗口的宽度",
   "ui_ai_chat_select_model": "请选择模型",
   "ui_ai_chat_input_hint": "在这里输入消息，按 ← 发送",
   "ui_ai_chat_configure_tools": "配置工具使用",
