feat(chat): improve ai chat agent
- Implemented new AI chat features including message copying, response regeneration, and message editing.
- Added localization strings for Portuguese, Russian, and Chinese languages to support new AI chat features.
- Introduced a new API endpoint to retrieve the default AI model.
- Enhanced the Wox API to include a method for fetching the default AI model.
- Updated the UI components to support image uploads and emoji selection for agents.
- Improved the agent selection process with a cancel option and default model usage.
- Refactored the AI chat controller to manage agent states and user interactions more effectively.
- Added inline action buttons for chat messages to facilitate user actions like copying and regenerating responses.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -170,6 +170,15 @@
   "ui_ai_chat_tools": "Tools",
   "ui_ai_chat_tools_enabled": "enabled",
   "ui_ai_chat_no_tools": "No tools",
+  "ui_ai_chat_copy_message": "Copy message",
+  "ui_ai_chat_regenerate_response": "Regenerate response",
+  "ui_ai_chat_edit_message": "Edit message",
+  "ui_ai_chat_cancel_agent_selection": "Cancel Selection",
+  "ui_ai_chat_use_default_model_and_tools": "Use default model and all tools",
+  "ui_ai_chat_enter_message": "Please enter a message",
+  "ui_ai_chat_message_copied": "Message copied to clipboard",
+  "ui_ai_chat_message_not_found": "Message not found",
+  "ui_ai_chat_no_user_message_to_regenerate": "No user message found to regenerate response",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
@@ -308,6 +317,8 @@
   "plugin_ai_chat_agents_tooltip": "Configure AI agents with custom prompts and tools",
   "plugin_ai_chat_agent_name": "Name",
   "plugin_ai_chat_agent_name_tooltip": "The name of the agent",
+  "plugin_ai_chat_agent_icon": "Icon",
+  "plugin_ai_chat_agent_icon_tooltip": "The icon of the agent",
   "plugin_ai_chat_agent_prompt": "Prompt",
   "plugin_ai_chat_agent_prompt_tooltip": "The system prompt for the agent",
   "plugin_ai_chat_agent_model": "Model",
