--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -168,6 +168,15 @@
   "ui_ai_chat_tools": "Ferramentas",
   "ui_ai_chat_tools_enabled": "habilitado",
   "ui_ai_chat_no_tools": "Sem ferramentas",
+  "ui_ai_chat_copy_message": "Copiar mensagem",
+  "ui_ai_chat_regenerate_response": "Regenerar resposta",
+  "ui_ai_chat_edit_message": "Editar mensagem",
+  "ui_ai_chat_cancel_agent_selection": "Cancelar seleção",
+  "ui_ai_chat_use_default_model_and_tools": "Usar modelo padrão e todas as ferramentas",
+  "ui_ai_chat_enter_message": "Por favor, digite uma mensagem",
+  "ui_ai_chat_message_copied": "Mensagem copiada para a área de transferência",
+  "ui_ai_chat_message_not_found": "Mensagem não encontrada",
+  "ui_ai_chat_no_user_message_to_regenerate": "Nenhuma mensagem do usuário encontrada para regenerar resposta",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
@@ -306,6 +315,8 @@
   "plugin_ai_chat_agents_tooltip": "Configure agentes de IA com prompts e ferramentas personalizados",
   "plugin_ai_chat_agent_name": "Nome",
   "plugin_ai_chat_agent_name_tooltip": "O nome do agente",
+  "plugin_ai_chat_agent_icon": "Ícone",
+  "plugin_ai_chat_agent_icon_tooltip": "O ícone do agente",
   "plugin_ai_chat_agent_prompt": "Prompt",
   "plugin_ai_chat_agent_prompt_tooltip": "O prompt do sistema para o agente",
   "plugin_ai_chat_agent_model": "Modelo",
