--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -168,6 +168,15 @@
   "ui_ai_chat_tools": "Инструменты",
   "ui_ai_chat_tools_enabled": "включено",
   "ui_ai_chat_no_tools": "Нет инструментов",
+  "ui_ai_chat_copy_message": "Копировать сообщение",
+  "ui_ai_chat_regenerate_response": "Перегенерировать ответ",
+  "ui_ai_chat_edit_message": "Редактировать сообщение",
+  "ui_ai_chat_cancel_agent_selection": "Отменить выбор",
+  "ui_ai_chat_use_default_model_and_tools": "Использовать модель по умолчанию и все инструменты",
+  "ui_ai_chat_enter_message": "Пожалуйста, введите сообщение",
+  "ui_ai_chat_message_copied": "Сообщение скопировано в буфер обмена",
+  "ui_ai_chat_message_not_found": "Сообщение не найдено",
+  "ui_ai_chat_no_user_message_to_regenerate": "Не найдено сообщение пользователя для регенерации ответа",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
@@ -306,6 +315,8 @@
   "plugin_ai_chat_agents_tooltip": "Настройте ИИ-агентов с пользовательскими подсказками и инструментами",
   "plugin_ai_chat_agent_name": "Имя",
   "plugin_ai_chat_agent_name_tooltip": "Имя агента",
+  "plugin_ai_chat_agent_icon": "Иконка",
+  "plugin_ai_chat_agent_icon_tooltip": "Иконка агента",
   "plugin_ai_chat_agent_prompt": "Подсказка",
   "plugin_ai_chat_agent_prompt_tooltip": "Системная подсказка для агента",
   "plugin_ai_chat_agent_model": "Модель",
