--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -168,6 +168,15 @@
   "ui_ai_chat_tools": "工具",
   "ui_ai_chat_tools_enabled": "已启用",
   "ui_ai_chat_no_tools": "无工具",
+  "ui_ai_chat_copy_message": "复制消息",
+  "ui_ai_chat_regenerate_response": "重新生成回复",
+  "ui_ai_chat_edit_message": "编辑消息",
+  "ui_ai_chat_cancel_agent_selection": "取消选择",
+  "ui_ai_chat_use_default_model_and_tools": "使用默认模型和全部工具",
+  "ui_ai_chat_enter_message": "请输入消息",
+  "ui_ai_chat_message_copied": "消息已复制到剪贴板",
+  "ui_ai_chat_message_not_found": "未找到消息",
+  "ui_ai_chat_no_user_message_to_regenerate": "未找到用户消息以重新生成回复",
   "ui_max_result_count": "最大结果数",
   "ui_max_result_count_tips": "显示在列表中的最大结果数量（5-15项）",
   "plugin_app_open": "打开",
@@ -308,6 +317,8 @@
   "plugin_ai_chat_agents_tooltip": "配置具有自定义提示词和工具的AI智能体",
   "plugin_ai_chat_agent_name": "名称",
   "plugin_ai_chat_agent_name_tooltip": "智能体的名称",
+  "plugin_ai_chat_agent_icon": "图标",
+  "plugin_ai_chat_agent_icon_tooltip": "智能体的图标",
   "plugin_ai_chat_agent_prompt": "提示词",
   "plugin_ai_chat_agent_prompt_tooltip": "智能体的系统提示词",
   "plugin_ai_chat_agent_model": "模型",
