feat(doctor): enhance doctor check functionality with previews and update notes

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -222,10 +222,13 @@
   "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s, статус: %s",
   "plugin_doctor_version_download": "Перейти на страницу загрузки",
   "plugin_doctor_version_apply_update": "Применить обновление",
+  "plugin_doctor_version_update_notes": "Примечания к обновлению",
+  "plugin_doctor_version_no_release_notes": "Для этого обновления нет доступных примечаний к выпуску.",
   "plugin_doctor_accessibility": "Доступность",
   "plugin_doctor_accessibility_required": "Вам нужно предоставить Wox разрешение на доступность для использования этого плагина",
   "plugin_doctor_accessibility_open_settings": "Открыть настройки доступности",
   "plugin_doctor_accessibility_granted": "Вы предоставили Wox разрешение на доступность",
+  "plugin_doctor_accessibility_explanation": "# Почему Wox нуждается в разрешении на доступность\n\nWox требует разрешение на доступность для выполнения следующих функций:\n\n- **Глобальные горячие клавиши**: Позволяют активировать Wox из любого места с помощью сочетаний клавиш\n- **Управление окнами**: Получение информации об активных окнах для предоставления контекстно-зависимых результатов\n- **Эмуляция клавиатуры**: Включение функций, таких как вставка результатов непосредственно в приложения\n\nБез этого разрешения некоторые функции Wox будут ограничены или недоступны.",
   "plugin_query_history_use": "Использовать",
   "plugin_browser_open_tab": "Открыть",
   "plugin_browser_server_port": "Порт сервера",
