feat(doctor): Add DoctorCheckResult model and integrate into EntityFactory for JSON parsing
- Introduced DoctorCheckResult and DoctorCheckInfo models to handle doctor check results.
- Updated EntityFactory to support parsing of DoctorCheckResult from JSON.
- Removed unused translation method from EntityFactory to streamline code.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -221,7 +221,7 @@
   "plugin_url_open_in_browser": "Open in browser",
   "plugin_doctor_version": "Version",
   "plugin_doctor_version_latest": "Already using the latest version: %s",
-  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s, status: %s",
+  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s",
   "plugin_doctor_version_download": "Go to download page",
   "plugin_doctor_version_apply_update": "Apply update",
   "plugin_doctor_version_update_notes": "Update Notes",
@@ -231,6 +231,7 @@
   "plugin_doctor_accessibility_open_settings": "Open Accessibility Settings",
   "plugin_doctor_accessibility_granted": "You have granted Wox Accessibility permission",
   "plugin_doctor_accessibility_explanation": "# Why Wox Needs Accessibility Permission\n\nWox requires accessibility permission to perform the following functions:\n\n- **Global Hotkeys**: Allow you to activate Wox from anywhere using keyboard shortcuts\n- **Window Management**: Get information about active windows to provide context-aware results\n- **Keyboard Simulation**: Enable features like pasting results directly into applications\n\nWithout this permission, some features of Wox will be limited or unavailable.",
+  "plugin_doctor_check": "Check",
   "plugin_query_history_use": "Use",
   "plugin_browser_open_tab": "Open",
   "plugin_browser_server_port": "Server Port",
