--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -219,7 +219,7 @@
   "plugin_url_open_in_browser": "Abrir no navegador",
   "plugin_doctor_version": "Versão",
   "plugin_doctor_version_latest": "Já está usando a versão mais recente: %s",
-  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s, status: %s",
+  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s",
   "plugin_doctor_version_download": "Ir para a página de download",
   "plugin_doctor_version_apply_update": "Aplicar atualização",
   "plugin_doctor_version_update_notes": "Notas da Atualização",
@@ -229,6 +229,7 @@
   "plugin_doctor_accessibility_open_settings": "Abrir configurações de acessibilidade",
   "plugin_doctor_accessibility_granted": "Você concedeu permissão de Acessibilidade ao Wox",
   "plugin_doctor_accessibility_explanation": "# Por que o Wox precisa de permissão de Acessibilidade\n\nO Wox requer permissão de acessibilidade para realizar as seguintes funções:\n\n- **Teclas de atalho globais**: Permite ativar o Wox de qualquer lugar usando atalhos de teclado\n- **Gerenciamento de janelas**: Obter informações sobre janelas ativas para fornecer resultados contextuais\n- **Simulação de teclado**: Habilitar recursos como colar resultados diretamente em aplicativos\n\nSem essa permissão, alguns recursos do Wox serão limitados ou indisponíveis.",
+  "plugin_doctor_check": "Verificar",
   "plugin_query_history_use": "Usar",
   "plugin_browser_open_tab": "Abrir",
   "plugin_browser_server_port": "Porta do servidor",
