--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -219,7 +219,7 @@
   "plugin_url_open_in_browser": "Открыть в браузере",
   "plugin_doctor_version": "Версия",
   "plugin_doctor_version_latest": "Уже используется последняя версия: %s",
-  "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s, статус: %s",
+  "plugin_doctor_version_update_available": "Доступна новая версия, текущая: %s, последняя: %s",
   "plugin_doctor_version_download": "Перейти на страницу загрузки",
   "plugin_doctor_version_apply_update": "Применить обновление",
   "plugin_doctor_version_update_notes": "Примечания к обновлению",
@@ -229,6 +229,7 @@
   "plugin_doctor_accessibility_open_settings": "Открыть настройки доступности",
   "plugin_doctor_accessibility_granted": "Вы предоставили Wox разрешение на доступность",
   "plugin_doctor_accessibility_explanation": "# Почему Wox нуждается в разрешении на доступность\n\nWox требует разрешение на доступность для выполнения следующих функций:\n\n- **Глобальные горячие клавиши**: Позволяют активировать Wox из любого места с помощью сочетаний клавиш\n- **Управление окнами**: Получение информации об активных окнах для предоставления контекстно-зависимых результатов\n- **Эмуляция клавиатуры**: Включение функций, таких как вставка результатов непосредственно в приложения\n\nБез этого разрешения некоторые функции Wox будут ограничены или недоступны.",
+  "plugin_doctor_check": "Проверить",
   "plugin_query_history_use": "Использовать",
   "plugin_browser_open_tab": "Открыть",
   "plugin_browser_server_port": "Порт сервера",
