--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -218,7 +218,7 @@
   "plugin_websearch_web_searches": "网页搜索",
   "plugin_doctor_version": "版本",
   "plugin_doctor_version_latest": "已经是最新版本：%s",
-  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s, 更新状态：%s",
+  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s",
   "plugin_doctor_version_download": "前往下载页面",
   "plugin_doctor_version_apply_update": "应用更新",
   "plugin_doctor_version_update_notes": "更新说明",
@@ -228,6 +228,7 @@
   "plugin_doctor_accessibility_open_settings": "打开辅助功能设置",
   "plugin_doctor_accessibility_granted": "您已授予 Wox 辅助功能权限",
   "plugin_doctor_accessibility_explanation": "# 为什么 Wox 需要辅助功能权限\n\nWox 需要辅助功能权限来执行以下功能：\n\n- **全局快捷键**：允许您通过键盘快捷键从任何地方激活 Wox\n- **窗口管理**：获取活动窗口的信息，以提供上下文相关的结果\n- **键盘模拟**：启用直接将结果粘贴到应用程序等功能\n\n如果没有此权限，Wox 的某些功能将受到限制或不可用。",
+  "plugin_doctor_check": "检查",
   "plugin_query_history_use": "使用",
   "plugin_url_open": "打开",
   "plugin_url_remove": "从历史记录中移除",
