feat(preview): add html preview type support
- Updated the doctor plugin to support HTML previews for version checks and update notes, improving the user experience with styled error and success messages.
- Added new localization strings for update error messages in English, Portuguese, Russian, and Chinese.
- Integrated the flutter_inappwebview package to render HTML content within the app, enhancing the display of update information.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -225,6 +225,7 @@
   "plugin_doctor_version_download": "Go to download page",
   "plugin_doctor_version_apply_update": "Apply update",
   "plugin_doctor_version_update_notes": "Update Notes",
+  "plugin_doctor_version_update_error": "Update Check Failed",
   "plugin_doctor_version_no_release_notes": "No release notes available for this update.",
   "plugin_doctor_accessibility": "Accessibility",
   "plugin_doctor_accessibility_required": "You need to grant Wox Accessibility permission to use this plugin",
