--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -223,6 +223,7 @@
   "plugin_doctor_version_download": "Ir para a página de download",
   "plugin_doctor_version_apply_update": "Aplicar atualização",
   "plugin_doctor_version_update_notes": "Notas da Atualização",
+  "plugin_doctor_version_update_error": "Falha na verificação de atualização",
   "plugin_doctor_version_no_release_notes": "Não há notas de lançamento disponíveis para esta atualização.",
   "plugin_doctor_accessibility": "Acessibilidade",
   "plugin_doctor_accessibility_required": "Você precisa conceder permissão de Acessibilidade ao Wox para usar este plugin",
