feat(plugin-installer): enhance plugin installation process
* Added support for checking if a plugin is already installed.
* Implemented version comparison to determine action title and button text.
* Updated notification messages for installation actions.
* Added new translation keys for plugin installation actions in multiple languages.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -274,6 +274,17 @@
   "plugin_wpm_local_plugin_directories": "Local Plugin Directories",
   "plugin_wpm_local_plugin_directories_tooltip": "The directories to load local plugins, useful for plugin development",
   "plugin_wpm_path": "Path",
+  "plugin_installer_install": "Install plugin",
+  "plugin_installer_upgrade": "Upgrade plugin",
+  "plugin_installer_reinstall": "Reinstall plugin",
+  "plugin_installer_downgrade": "Downgrade plugin",
+  "plugin_installer_action_start": "%s: %s",
+  "plugin_installer_action_failed": "Failed to %s: %s",
+  "plugin_installer_action_success": "Plugin %s: %s",
+  "plugin_installer_verb_install_past": "installed",
+  "plugin_installer_verb_upgrade_past": "upgraded",
+  "plugin_installer_verb_reinstall_past": "reinstalled",
+  "plugin_installer_verb_downgrade_past": "downgraded",
   "plugin_ai_command_name": "Name",
   "plugin_ai_command_name_tooltip": "The name of the AI command",
   "plugin_ai_command_command": "Command",
