--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -272,6 +272,17 @@
   "plugin_wpm_local_plugin_directories": "Diretórios de Plugins Locais",
   "plugin_wpm_local_plugin_directories_tooltip": "Os diretórios para carregar plugins locais, útil para desenvolvimento de plugins",
   "plugin_wpm_path": "Caminho",
+  "plugin_installer_install": "Instalar plugin",
+  "plugin_installer_upgrade": "Atualizar plugin",
+  "plugin_installer_reinstall": "Reinstalar plugin",
+  "plugin_installer_downgrade": "Fazer downgrade do plugin",
+  "plugin_installer_action_start": "%s: %s",
+  "plugin_installer_action_failed": "Falha ao %s: %s",
+  "plugin_installer_action_success": "Plugin %s: %s",
+  "plugin_installer_verb_install_past": "instalado",
+  "plugin_installer_verb_upgrade_past": "atualizado",
+  "plugin_installer_verb_reinstall_past": "reinstalado",
+  "plugin_installer_verb_downgrade_past": "rebaixado",
   "plugin_ai_command_name": "Nome",
   "plugin_ai_command_name_tooltip": "O nome do comando de IA",
   "plugin_ai_command_command": "Comando",
