--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -272,6 +272,17 @@
   "plugin_wpm_local_plugin_directories": "Каталоги локальных плагинов",
   "plugin_wpm_local_plugin_directories_tooltip": "Каталоги для загрузки локальных плагинов, полезно для разработки плагинов",
   "plugin_wpm_path": "Путь",
+  "plugin_installer_install": "Установить плагин",
+  "plugin_installer_upgrade": "Обновить плагин",
+  "plugin_installer_reinstall": "Переустановить плагин",
+  "plugin_installer_downgrade": "Понизить версию плагина",
+  "plugin_installer_action_start": "%s: %s",
+  "plugin_installer_action_failed": "Не удалось %s: %s",
+  "plugin_installer_action_success": "Плагин %s: %s",
+  "plugin_installer_verb_install_past": "установлен",
+  "plugin_installer_verb_upgrade_past": "обновлен",
+  "plugin_installer_verb_reinstall_past": "переустановлен",
+  "plugin_installer_verb_downgrade_past": "понижен",
   "plugin_ai_command_name": "Название",
   "plugin_ai_command_name_tooltip": "Название команды ИИ",
   "plugin_ai_command_command": "Команда",
