--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -274,6 +274,17 @@
   "plugin_wpm_local_plugin_directories": "本地插件目录",
   "plugin_wpm_local_plugin_directories_tooltip": "用于加载本地插件的目录，对插件开发有用",
   "plugin_wpm_path": "路径",
+  "plugin_installer_install": "安装插件",
+  "plugin_installer_upgrade": "升级插件",
+  "plugin_installer_reinstall": "重新安装插件",
+  "plugin_installer_downgrade": "降级插件",
+  "plugin_installer_action_start": "%s: %s",
+  "plugin_installer_action_failed": "%s失败: %s",
+  "plugin_installer_action_success": "插件%s: %s",
+  "plugin_installer_verb_install_past": "已安装",
+  "plugin_installer_verb_upgrade_past": "已升级",
+  "plugin_installer_verb_reinstall_past": "已重新安装",
+  "plugin_installer_verb_downgrade_past": "已降级",
   "plugin_ai_command_name": "名称",
   "plugin_ai_command_name_tooltip": "AI 命令的名称",
   "plugin_ai_command_command": "命令",
