feat(script_plugin): enhance script plugin functionality
- Increased notification display duration from 3 to 8 seconds in API implementation.
- Refactored script execution logic in host_script.go to improve error handling and streamline execution.
- Added checks for existing script plugins in WPM plugin creation process, providing options to open or overwrite.
- Enhanced user feedback with localized messages for plugin creation and actions.
- Updated script templates (JavaScript, Python, Bash) to include environment variable documentation and improved action handling.
- Improved UI responsiveness in Flutter by implementing AnimatedSwitcher for list view updates.
- Added validation for viewport height in WoxListController to prevent scrolling issues during initialization.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -267,6 +267,8 @@
   "plugin_wpm_command_install": "Install Wox plugins",
   "plugin_wpm_command_uninstall": "Uninstall Wox plugins",
   "plugin_wpm_command_create": "Create Wox plugin",
+  "plugin_wpm_enter_plugin_name": "Please enter a plugin name",
+  "plugin_wpm_enter_plugin_name_subtitle": "Type the name of the plugin you want to create",
   "plugin_wpm_command_dev_list": "List local Wox plugins",
   "plugin_wpm_command_dev_add": "Add existing Wox plugin directory",
   "plugin_wpm_command_dev_remove": "Remove local Wox plugin, followed by a directory",
