--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -267,6 +267,8 @@
   "plugin_wpm_command_install": "安装 Wox 插件",
   "plugin_wpm_command_uninstall": "卸载 Wox 插件",
   "plugin_wpm_command_create": "创建 Wox 插件",
+  "plugin_wpm_enter_plugin_name": "请输入插件名称",
+  "plugin_wpm_enter_plugin_name_subtitle": "输入您要创建的插件名称",
   "plugin_wpm_command_dev_list": "列出本地 Wox 插件",
   "plugin_wpm_command_dev_add": "添加现有的 Wox 插件目录",
   "plugin_wpm_command_dev_remove": "移除本地 Wox 插件，后跟目录",
